NAV-14671 Added custom ktlint tasks to run com.pinterest.ktlint.Main as CLI